reimplementation/partial fix of cwiki