@@ -1,31 +1,42 @@
 package net.earthcomputer.clientcommands.features;
 
 import com.google.gson.Gson;
-import net.minecraft.client.resource.language.I18n;
+import com.google.gson.annotations.SerializedName;
+import net.fabricmc.fabric.api.client.command.v2.FabricClientCommandSource;
+import net.minecraft.text.MutableText;
+import net.minecraft.text.Text;
 import net.minecraft.util.Formatting;
-import org.jetbrains.annotations.Nullable;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+import java.io.UnsupportedEncodingException;
+import java.net.*;
 import java.util.Locale;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import static net.earthcomputer.clientcommands.command.ClientCommandHelper.*;
+
 public class WikiRetriever {
 
-    private static final String WIKI_HOST = "https://minecraft.gamepedia.com/";
+    public static final Logger LOGGER = LogManager.getLogger();
+
+    private static final String WIKI_HOST = "https://minecraft.fandom.com/";
+//    private static final String PAGE_SUMMARY_QUERY = WIKI_HOST + "api.php?action=query&prop=extracts&format=json&titles=%s";
     private static final String PAGE_SUMMARY_QUERY = WIKI_HOST + "api.php?action=query&prop=extracts&exintro=true&format=json&titles=%s";
-    private static final Pattern HTML_TAG_PATTERN = Pattern.compile("<\\s*(/)?\\s*(\\w+).*?>|<!--.*?-->|\n", Pattern.DOTALL);
+    private static final String PAGE_TOC_PARSE = WIKI_HOST + "api.php?action=parse&prop=sections&format=json&page=%s";
+    private static final String PAGE_SECTION_PARSE = WIKI_HOST + "api.php?action=parse&prop=text&format=json&page=%s&section=%s&disablelimitreport=true&disableeditsection=true";
+    private static final Pattern HTML_TAG_PATTERN = Pattern.compile("<\\s*(/)?\\s*(\\w+).*?>", Pattern.DOTALL);
     private static final Formatting CODE_COLOR = Formatting.DARK_GREEN;
     private static final Gson GSON = new Gson();
 
     public static String decode(String html) {
+        html = html.replaceAll("<span class=\"sprite inv-sprite\" title=\"(.*?)\".*?</span>", "[$1] ");
+
         Matcher matcher = HTML_TAG_PATTERN.matcher(html);
         StringBuilder raw = new StringBuilder();
 
@@ -47,6 +58,7 @@ public class WikiRetriever {
 
             if (!endTag) {
                 switch (tagName) {
+                    case "th": //fallthrough
                     case "b":
                         raw.append(Formatting.BOLD);
                         bold = true;
@@ -95,6 +107,9 @@ public class WikiRetriever {
                 }
             } else {
                 switch (tagName) {
+                    case "th":
+                        raw.append(" ");
+                        //fallthrough
                     case "b":
                         if (code) {
                             raw.append(CODE_COLOR);
@@ -168,58 +183,159 @@ public class WikiRetriever {
         }
         matcher.appendTail(raw);
 
-        if (raw.length() == 0) {
-            return Formatting.ITALIC + I18n.translate("commands.cwiki.noContent");
-        }
-
         String rawStr = raw.toString();
         rawStr = rawStr.replace("&quot;", "\"");
         rawStr = rawStr.replace("&#39;", "'");
         rawStr = rawStr.replace("&lt;", "<");
         rawStr = rawStr.replace("&gt;", ">");
         rawStr = rawStr.replace("&amp;", "&");
+        rawStr = rawStr.replace("&#32;", " ");
+        rawStr = rawStr.replace("&#160;", " ");
+        rawStr = rawStr.replaceAll("&#160;(or|\\+)\n", " $1 ");
+        rawStr = rawStr.replaceAll("\\n\\s*?(§.)(?=\\n)", "$1");
 
         return rawStr;
     }
 
-    @Nullable
     public static String getWikiSummary(String pageName) {
         URL url;
         try {
-            String encodedPage = URLEncoder.encode(pageName, StandardCharsets.UTF_8);
+            String encodedPage = URLEncoder.encode(pageName, "UTF-8");
             url = new URL(String.format(PAGE_SUMMARY_QUERY, encodedPage));
-        } catch (MalformedURLException e) {
+            LOGGER.info("Summary url: " + url.toString());
+        } catch (UnsupportedEncodingException | MalformedURLException e) {
             return null;
         }
 
-        QueryResult result;
+        SummaryQueryResult result;
         try (InputStream in = url.openConnection().getInputStream()) {
-            result = GSON.fromJson(new InputStreamReader(in), QueryResult.class);
+            result = GSON.fromJson(new InputStreamReader(in), SummaryQueryResult.class);
         } catch (IOException e) {
             return null;
         }
 
-        if (result.query.pages.isEmpty())
-            return null;
+        if (result.query.pages.isEmpty()) { return null; }
         var page = result.query.pages.values().iterator().next();
-        if (page.missing != null || page.extract == null)
-            return null;
+        if (page.missing != null || page.extract == null) { return null; }
+
         String html = page.extract;
         return decode(html);
     }
 
-    @SuppressWarnings("unused")
-    private static class QueryResult {
+    public static ParseTOCResult getTOCData(String pageName) {
+        URL url;
+        try {
+            String encodedPage = URLEncoder.encode(pageName, "UTF-8");
+            url = new URL(String.format(PAGE_TOC_PARSE, encodedPage));
+            LOGGER.info("TOCData url: " + url.toString());
+        } catch (UnsupportedEncodingException | MalformedURLException e) {
+            return null;
+        }
+
+        ParseTOCResult result;
+        try (InputStream in = url.openConnection().getInputStream()) {
+            result = GSON.fromJson(new InputStreamReader(in), ParseTOCResult.class);
+            LOGGER.info(result);
+        } catch (IOException e) {
+            return null;
+        }
+
+        if (result.error != null || result.parse.sections.length == 0) {
+            return null;
+        }
+
+        return result;
+    }
+
+    public static void displayWikiTOC(String pageName, FabricClientCommandSource source) {
+
+        ParseTOCResult TOCData = getTOCData(pageName);
+        if(TOCData == null) {
+            return;
+        }
+
+        MutableText toc = Text.literal("");
+        for (ParseTOCResult.Parse.Section currentSection : TOCData.parse.sections) {
+            toc.append("\n");
+            for (int i = 1; i < currentSection.toclevel; i++) { toc.append(" "); }
+            toc.append(getWikiTOCTextComponent(pageName, currentSection.number, currentSection.line));
+        }
+        source.sendFeedback(toc);
+    }
+    public static String getSectionIndex(String pageName, String section) {
+        ParseTOCResult TOCData = getTOCData(pageName);
+        if (TOCData == null) { return null; }
+        for (ParseTOCResult.Parse.Section currentSection : TOCData.parse.sections) {
+            if(currentSection.anchor.equals(section) || currentSection.number.equals(section)) {
+                return currentSection.index;
+            }
+        }
+        return "0";
+    }
+
+    public static String getWikiSection(String pageName, String section) {
+
+        String sectionIndex = getSectionIndex(pageName, section);
+        URL url;
+        try {
+            String encodedPage = URLEncoder.encode(pageName, "UTF-8");
+            url = new URL(String.format(PAGE_SECTION_PARSE, encodedPage, sectionIndex));
+            LOGGER.info("Section URL: " + url.toString());
+        } catch (UnsupportedEncodingException | MalformedURLException e) {
+            return null;
+        }
+
+        ParseSectionResult result;
+        try (InputStream in = url.openConnection().getInputStream()) {
+            result = GSON.fromJson(new InputStreamReader(in), ParseSectionResult.class);
+        } catch (IOException e) {
+            return null;
+        }
+
+        if (result.error != null || result.parse.text.section == null) {
+            return null;
+        }
+        String html = result.parse.text.section;
+        return decode(html);
+    }
+
+    private static class SummaryQueryResult {
         public String batchcomplete;
         public Query query;
         private static class Query {
-            @SuppressWarnings("MismatchedQueryAndUpdateOfCollection")
             private Map<String, Page> pages;
             private static class Page {
                 public int pageid;
                 public String title;
                 public String extract;
                 public String missing;
+            }
+        }
+    }
+
+    private static class ParseSectionResult {
+        public Object error;
+        public Parse parse;
+        private static class Parse {
+            public String title;
+            public Text text;
+            private static class Text {
+                @SerializedName("*") public String section;
+            }
+        }
+    }
+
+    private static class ParseTOCResult {
+        public Object error;
+        public Parse parse;
+        private static class Parse {
+            private Section sections[];
+            private static class Section {
+                public int toclevel;
+                public String index;
+                public String line;
+                public String number;
+                public String anchor;
             }
         }
     }
